--- a/Miscellanous/Frontend/index.html
+++ b/Miscellanous/Frontend/index.html
@@ -17,5 +17,6 @@
         <input placeholder="enter password " name="password" type="password" />
         <button>submit</button>
     </form>
+        <script src="app.js"></script>
 </body>
 </html>
